package game.entities;

public class Monster {
}
